--- a/Forms and Table/form.html
+++ b/Forms and Table/form.html
@@ -92,11 +92,11 @@
     <h1>Employee Task Tracker</h1>
     <form>
         <label for="name">Name</label>
-        <input type="text" id="name" name="name" required>
+        <input type="text" id="name" name="name" placeholder="Enter your name" required>
         <label for="task">Task</label>
-        <input type="text" id="task" name="task" required>
+        <input type="text" id="task" name="task" placeholder="Enter your task" required>
         <label for="description">Description</label>
-        <textarea id="description" name="description" rows="4"></textarea>
+        <textarea id="description" name="description" rows="4" placeholder="Enter your description"></textarea>
         <label for="due">Due Date</label>
         <input type="date" id="due" name="due" required>
         <button>Assign Task</button>
