--- a/Newspaper/paper.html
+++ b/Newspaper/paper.html
@@ -4,12 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>News paper</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <style>
         *
         {
             margin: 0;
-            /* width:800px;
-            padding-inline-start:60px; */
         }
         header
         {
@@ -142,10 +141,11 @@
             background-size: cover;
             color: white;
             text-align: center;
+            height:100px;
         }
         footer>a
         {
-            padding:50px;
+            padding:40px;
             color: white;
             text-decoration: none;
         }
@@ -251,11 +251,15 @@
         </ul><br>
     </section>
     <footer>
-        <h3><i>Copyright 2024. All rights reserved.</i></h3>
-        <a href="">linkedin</a>
-        <a href="">WhatsApp</a>
-        <a href="">Instagram</a>
-        <a href="">Facebook</a>
+        <h3><i>Copyright 2024. All rights reserved.</i></h3><br><br>
+        <i class="fa fa-linkedin">linkedin</i>
+        <a href="https://www.linkedin.com/in/kabiyashwanth-v-901415232/" target="_blank"></a>
+        <i class="fa fa-whatsapp">Whatsapp</i>
+        <a href="https://wa.me/9489519259?text-hello" target="_blank"></a>
+        <i class="fa fa-instagram">Instagram</i>
+        <a href="https://www.instagram.com/kabiyashwanth/profilecard/?igsh=MWVzcXVheml2dnFyNg==" target="_blank"></a>
+        <i class="fa fa-github">Github</i>
+        <a href="https://github.com/KABIYASHWANTHV" target="_blank"></a>
     </footer>
 </body>
 </html>
