--- a/golf/website.html
+++ b/golf/website.html
@@ -27,22 +27,21 @@
         </nav>
     </header>
     <section id="image">
-        <div id="im"></div>
         <div id="l">
             <h2>Welcome to the club</h2>
             <h2>Tiya is Creative</h2><br>
-            <button>Our story</button>
+            <button>Our story</button><a>Become a member</a>
         </div>
         <div id="r">
-            <iframe width="400" height="300" src="https://www.youtube.com/embed/MGNgbNGOzh8?si=RjQUHLLJJqdRw-X9" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <iframe width="500px" height="328px" src="https://www.youtube.com/embed/MGNgbNGOzh8?si=RjQUHLLJJqdRw-X9" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
     </section><br><br>
     <section id="s1">
         <div id="ab">
-            <h3>About Tiya</h3><br><br>
+            <h2>About Tiya</h2><br><br>
         </div>
         <div id="l1">
-            <h4>Tiya club history</h4><br>
+            <h3>Tiya club history</h3><br>
             <p>
                 <strong>Since 1984</strong>
                 Tiya is ranked #8 in the top 10<br>
@@ -63,17 +62,21 @@
         <div id="r2">
             <img src="/golf/WhatsApp Image 2024-12-31 at 10.06.49_eae22339.jpg">
             <p>John</p>
-            <h4>Founder</h4>
+            <h4>Co-Founder</h4>
         </div>
     </section><br><br><br><br><br><br><br><br><br>
     <section id="s2">
         <div id="id1">
-            <h1>Get our newspaper</h1><br>
-            <p>lorem ipsum dolor sit amet, consectetur<br> adipisicing
-            elit, sed do eiusmod tempor ut labore at dolore</p>
-            <input type="text" id="email" name="email" placeholder="Email address">
-            <i class="fa fa-envelope"></i>
-            <button>Subscribe</button>
+            <h2>Get our newspaper</h2><br>
+            <p>lorem ipsum dolor sit amet, consectetur adipisicing<br>
+            elit, sed do eiusmod tempor ut labore at dolore</p><br>
+            <div class="input">
+                <div class="ip1">
+                    <input  type="text" id="email" name="email" placeholder="Email address">
+                </div>
+                <i class="fa fa-envelope"></i>
+                <button>Subscribe</button>
+            </div>
         </div>
     </section><br><br>
     <div id="member">
@@ -81,7 +84,7 @@
     </div><br><br>
     <section id="s3">
         <div id="div2">
-            <h3>Tiya Membership</h3><br><br>
+            <h4>Tiya Membership</h4><br><br>
             <table>
                 <thead>
                     <tr>
@@ -132,7 +135,7 @@
             </table>
         </div>
         <div id="div3">
-            <h3>Please join us!</h3><br><br>
+            <h4>Please join us!</h4><br><br>
             <div id="div4">
                 <h2>Become a member</h2>
                 <input type="text" id="fullname" name="fullname" placeholder="Full Name"><br>
@@ -142,50 +145,89 @@
             </div>
         </div>
     </section><br><br>
-    <section id="s4">
-        <h2>Upcoming Events</h2>
-        <div id="date">
-            <h3>24</h3>
-            <p>Feb<br>2048</p>
-        </div>
-        <div id="img2">
-            <img src="/golf/professional-golf-player.jpg">
-        </div>
-        <div id="div5">
-            <h3>Private activities</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur<br>
-            adipisicing elit, sed do eiusmod tempor incididunt<br>
-            ut labore et dolore magna aliqua.</p>
-        </div>
-    </section>
-    <section id="s5">
-        <div id="date1">
-            <h3>25</h3>
-            <p>Feb<br>2048</p>
-        </div>
-        <div id="img3">
-            <img src="/golf/girl-taking-selfie-with-friends-golf-field_23-2148295298.jpg">
-        </div>
-        <div id="div6">
-            <h3>Group tournament activities</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed<br>
-                do eiusmod tempor incididunt ut labore et dolore magna<br>aliqua.</p>
-        </div>
-    </section><br><br><br><br><br>
+    <section id="Events" class="events">
+        <p class="h1">Upcoming Events</p>
+    <div class="events-container">
+        <div class="up">
+            <div class="up-upper">
+                <div class="calendar">
+                    <p>24</p>
+                    <p class="h2">Feb 2048</p>
+                </div>
+                <div>
+                    <img src="/golf/professional-golf-player.jpg" width="100%" height="100%">
+                </div>
+            </div>
+            <div class="up-activities">
+
+                <p class="h4">Private activities</p><br>
+                        <p class="grey">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                        <br><hr>
+                        <div class="small-container">
+                            <div>
+                                <b>
+                                    <p class="violet-1">Location:</p><br>
+                                    <p class="violet-1">Ticket:</p>
+                                </b>
+                            </div>
+                            <div>
+                                <p class="grey">National Center, NYC</p><br>
+                                <p class="grey">$250</p>
+                            </div>
+                            <div>
+                                <button>Buy Ticket</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="up">
+                    <div class="up-upper">
+                        <div class="calendar">
+                            <p>28</p>
+                            <p class="h2">Feb 2048</p>
+                        </div>
+                        <div>
+                            <img src="/golf/girl-taking-selfie-with-friends-golf-field_23-2148295298.jpg" width="100%" height="100%">
+                        </div>
+                    </div>
+                    <div class="up-activities">
+                        <p class="h4">Group tournament activities</p><br>
+                        <p class="grey">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                        <br><hr>
+                        <div class="small-container">
+                            <div>
+                                <b>
+                                    <p class="violet-1">Location:</p><br>
+                                    <p class="violet-1">Ticket:</p>
+                                </b>
+                            </div>
+                            <div>
+                                <p class="grey">National Center, NYC</p><br>
+                                <p class="grey">$350</p>
+                            </div>
+                            <div>
+                                <button>Buy Ticket</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section><br><br>
     <section id="s6">
         <h2>Contact Tiya</h2><br><br>
         <input type="text" name="fullname" id="fullname" placeholder="Full Name"><input type="email" id="email" name="email" placeholder="Email Adress"><br><br>
         <textarea cols="58" rows="10" placeholder="Message">Message</textarea><br><br>
         <button>Submit Form</button>
         <div id="div7">
-            <p>London, United<br> 
+            <p>London, United 
             Kingdom<br>
-            (020) 010-020-<br>
+            (020) 010-020-
             0340<br>
             info@company.com<br><br>
             <button>Directions</button>
             </p>
         </div>
+        <img class="img4" src="WorldMap.svg">
     </section>
     <div class="contact-down">
         <div class="logo-container1"> 
