--- a/golf/website.html
+++ b/golf/website.html
@@ -19,7 +19,7 @@
                 <a href="#image">Home</a>
                 <a href="#s1">About</a>
                 <a href="#s3">Membership</a>
-                <a href="#s4">Events</a>
+                <a href="#Events">Events</a>
                 <a href="#s6">Contact Us</a>
                 <a href="">Pages</a>
                 <button><b>Member Login</b></button>
@@ -180,33 +180,35 @@
                         </div>
                     </div>
                 </div>
-                <div class="up">
-                    <div class="up-upper">
-                        <div class="calendar">
-                            <p>28</p>
-                            <p class="h2">Feb 2048</p>
-                        </div>
-                        <div>
-                            <img src="/golf/girl-taking-selfie-with-friends-golf-field_23-2148295298.jpg" width="100%" height="100%">
-                        </div>
-                    </div>
-                    <div class="up-activities">
-                        <p class="h4">Group tournament activities</p><br>
-                        <p class="grey">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                        <br><hr>
-                        <div class="small-container">
-                            <div>
-                                <b>
-                                    <p class="violet-1">Location:</p><br>
-                                    <p class="violet-1">Ticket:</p>
-                                </b>
+                <div class="id">
+                    <div class="up">
+                        <div class="up-upper">
+                            <div class="calendar">
+                                <p>28</p>
+                                <p class="h2">Feb 2048</p>
                             </div>
                             <div>
-                                <p class="grey">National Center, NYC</p><br>
-                                <p class="grey">$350</p>
+                                <img src="/golf/girl-taking-selfie-with-friends-golf-field_23-2148295298.jpg" width="100%" height="100%">
                             </div>
-                            <div>
-                                <button>Buy Ticket</button>
+                        </div>
+                        <div class="up-activities">
+                            <p class="h4">Group tournament activities</p><br>
+                            <p class="grey">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                            <br><hr>
+                            <div class="small-container">
+                                <div>
+                                    <b>
+                                        <p class="violet-1">Location:</p><br>
+                                        <p class="violet-1">Ticket:</p>
+                                    </b>
+                                </div>
+                                <div>
+                                    <p class="grey">National Center, NYC</p><br>
+                                    <p class="grey">$350</p>
+                                </div>
+                                <div>
+                                    <button>Buy Ticket</button>
+                                </div>
                             </div>
                         </div>
                     </div>
