--- a/gaming/gaming.html
+++ b/gaming/gaming.html
@@ -8,29 +8,87 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia">
 </head>
 <body>
-    <header>
-        <div class="header">
-            <div class="nav">
-                <img src="/gaming/logo (1).png">
+    <div class="img">       
+         <header>
+            <div class="header">
+                <div class="nav">
+                    <img src="/gaming/logo (1).png">
+                </div>
+                <ul class="navbar">
+                    <li>
+                        <a href="">Home</a>
+                    </li>
+                    <li>
+                        <a href="">Our Shop</a>
+                    </li>
+                    <li>
+                        <a href="">Product Details</a>
+                    </li>
+                    <li>
+                        <a href="contact.html" target="_blank">Contact Us</a>
+                    </li>
+                </ul>
+                <div class="sign">
+                    <a href="">sign in</a>
+                </div>
             </div>
-            <ul class="navbar">
-                <li>
-                    <a href="">Home</a>
-                </li>
-                <li>
-                    <a href="">Our Shop</a>
-                </li>
-                <li>
-                    <a href="">Product Details</a>
-                </li>
-                <li>
-                    <a href="">Contact Us</a>
-                </li>
-                <li>
-                    <a href="">SIGN IN</a>
-                </li>
-            </ul>
+        </header><br><br><br>
+        <div class="container">
+            <div class="row">
+                <h6>Welcome to lugx</h6>
+                <h2>BEST GAMING SITE EVER!</h2>
+                <img src="/gaming/caption-dec.png">
+                <p>LUGX Gaming is free Bootstrap 5 HTML CSS website template for your gaming<br><br>
+                    websites. You can download and use this layout for commercial purposes.<br><br>
+                    Please tell your friends about TemplateMo.
+                </p><br><br><br><br>
+                <div class="search-input">
+                    <form id="search" action="#">
+                    <input type="text" placeholder="Type Something" id="searchText" name="searchKeyword" onkeypress="handle">
+                    <button role="button">Search Now</button>
+                    </form>
+                </div>
+            </div>
+            <div class="right-image">
+                <div class="image1">
+                    <img src="/gaming/banner-image.jpg" alt="">
+                </div>
+                <span class="price">$22</span>
+                <span class="offer">-40%</span>
+            </div>
         </div>
-    </header>
+    </div>
+    <a href="#">
+        <div class="item">
+            <div class="image2">
+                <img src="/gaming/featured-01.png" alt style="max-width: 44px;">
+            </div>
+            <h4>Free Storage</h4>
+        </div>
+    </a>
+    <a href="#">
+        <div class="item1">
+            <div class="image3">
+                <img src="/gaming/featured-02.png" alt style="max-width: 44px;">
+            </div>
+            <h4>USER MORE</h4>
+        </div>
+    </a>
+    <a href="#">
+        <div class="item2">
+            <div class="image4">
+                <img src="/gaming/featured-03.png" alt style="max-width: 44px;">
+            </div>
+            <h4>REPLY READY</h4>
+        </div>
+    </a>
+    <a href="#">
+        <div class="item3">
+            <div class="image5">
+                <img src="/gaming/featured-04.png" alt style="max-width: 44px;">
+            </div>
+            <h4>EASY LAYOUT</h4>
+        </div>
+    </a>
 </body>
 </html>
