--- a/gaming/contact.html
+++ b/gaming/contact.html
@@ -36,7 +36,7 @@
             <h3>CONTACT US</h3>
             <span>Home>Contact Us</span>
         </div>
-    </div><br><br>
+    </div><br>
     <div class="div2">
         <div class="div3">
             <h6>CONTACT US</h6>
@@ -46,10 +46,31 @@
                 and it is suitable for your gaming shop ecommerce<br><br>
                 websites. Feel free to use this for any purpose. Thank you.
             </p>
+            <ul>
+                <li>
+                    <span>Address</span>
+                    Sunny Isles Beach, FL 33160, United States
+                </li>
+                <li>
+                    <span>Phone</span>
+                    +123 456 7890
+                </li>
+                <li>
+                    <span>Email</span>
+                    lugx@contact.com
+                </li>
+            </ul>
         </div>
         <div class="div4">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d43722.34405005721!2d-80.118781!3d25.952478!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88d9add4b4ac788f%3A0xe77469d09480fcdb!2sSunny%20Isles%20Beach!5e1!3m2!1sen!2sth!4v1736139722546!5m2!1sen!2sth" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d43722.34405005721!2d-80.118781!3d25.952478!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88d9add4b4ac788f%3A0xe77469d09480fcdb!2sSunny%20Isles%20Beach!5e1!3m2!1sen!2sth!4v1736139722546!5m2!1sen!2sth" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe><br><br><br><br>
+            <input type="text" id="name" placeholder="Your Name..."><input type="text" id="surname" placeholder="Your Surname..."><br>
+            <input type="email" id="email" placeholder="Your Email..."><input type="text" id="subject" placeholder="Subject..."><br>
+            <textarea placeholder="Your Message"></textarea><br>
+            <button>send message now</button>
         </div>
     </div>
+    <footer>
+        <p>Copyright © 2048 LUGX Gaming Company. All rights reserved. &nbsp;&nbsp; <a href="https://templatemo.com" target="_blank">Design: TemplateMo</a></p>
+    </footer>
 </body>
 </html>
