--- a/script/day 2/task9/home.html
+++ b/script/day 2/task9/home.html
@@ -3,10 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Multiples of 5</title>
+    <title>Confirm box</title>
 </head>
 <body>
-    
+    <button onclick="confirmbox()">Submit</button>
+    <p id="demo"></p>
 </body>
-<script src="script.js"></script>
+<script src="script.js">
+    
+</script>
 </html>
