--- a/script/day 2/task10/home.html
+++ b/script/day 2/task10/home.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Multiples of 5</title>
+    <title>Prompt box</title>
 </head>
 <body>
-    
+    <button onclick="promptbox()">Submit</button>
+    <p id="demo"></p>
 </body>
 <script src="script.js"></script>
 </html>
