--- a/script/day 2/task11/home.html
+++ b/script/day 2/task11/home.html
@@ -3,10 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Multiples of 5</title>
+    <title>BMI calculator</title>
 </head>
 <body>
-    
+    <button onclick="box()">Submit</button>
 </body>
-<script src="script.js"></script>
+<script>
+
+</script>
 </html>
