--- a/script/day 2/task13/home.html
+++ b/script/day 2/task13/home.html
@@ -3,12 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BMI calculator</title>
+    <title>Vowel count</title>
 </head>
 <body>
-    <button onclick="box()">Submit</button>
+    <input id="input1"><br><br>
+    <button onclick="vowels()">Calculate</button><br><br>
+    <p id="output1"></p>
 </body>
 <script src="script.js">
-
+    
 </script>
 </html>
