--- a/gaming/gaming.html
+++ b/gaming/gaming.html
@@ -22,7 +22,7 @@
                         <a href="">Our Shop</a>
                     </li>
                     <li>
-                        <a href="">Product Details</a>
+                        <a href="product.html">Product Details</a>
                     </li>
                     <li>
                         <a href="contact.html" target="_blank">Contact Us</a>
