--- a/gaming/contact.html
+++ b/gaming/contact.html
@@ -21,7 +21,7 @@
                         <a href="">Our Shop</a>
                     </li>
                     <li>
-                        <a href="">Product Details</a>
+                        <a href="product.html">Product Details</a>
                     </li>
                     <li>
                         <a href="contact.html">Contact Us</a>
