--- a/gaming/product.html
+++ b/gaming/product.html
@@ -50,7 +50,15 @@
                 shop ecommerce websites. Feel free to use this for any purpose. Thank you.
             </p>
             <input type="qty" class="form-control" id="1" aria-describedby="quantity" placeholder="1"><button type="submit"><i class="fa fa-shopping-bag"></i> ADD TO CART</button>
+            <div class="ul">
+                <ul>
+                    <li><span>Game ID:</span> COD MMII</li>
+                    <li><span>Genre:</span> <a href="#">Action</a>, <a href="#">Team</a>, <a href="#">Single</a></li>
+                    <li><span>Multi-tags:</span> <a href="#">War</a>, <a href="#">Battle</a>, <a href="#">Royal</a></li>
+                </ul>
+            </div>
         </div>
     </div>
+    <hr>
 </body>
 </html>
