--- a/gaming/gaming.html
+++ b/gaming/gaming.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gaming</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia">
 </head>
 <body>
@@ -90,5 +91,52 @@
             <h4>EASY LAYOUT</h4>
         </div>
     </a>
+    <div class="div1">
+        <div class="div2">
+            <h6>Trending</h6>
+            <div class="header-content">
+                <h2>Trending Games</h2>
+                <a href="shop.html">View All</a>
+            </div>
+        </div>
+        <div class="thumb">
+            <div class="img1">
+                <img src="/gaming/trending-01.jpg">
+                <span class="price"><em><strike>$28</strike></em><br>$20</span>
+                <div class="cat">
+                    <span class="category">Action</span>
+                    <h4>Assasin Creed</h4>
+                    <a href="product.html"><i class="fas fa-shopping-bag"></i></a>
+                </div>
+            </div>
+            <div class="img2">
+                <img src="/gaming/trending-02.jpg">
+                <span class="price1"><em>$40</em></span>
+                <div class="cat1">
+                    <span class="category1">Action</span>
+                    <h4>Assasin Creed</h4>
+                    <a href="product.html"><i class="fas fa-shopping-bag"></i></a>
+                </div>
+            </div>
+            <div class="img3">
+                <img src="/gaming/trending-03.jpg">
+                <span class="price2"><em><strike>$64</strike></em><br>$44</span>
+                <div class="cat2">
+                    <span class="category2">Action</span>
+                    <h4>Assasin Creed</h4>
+                    <a href="product.html"><i class="fas fa-shopping-bag"></i></a>
+                </div>
+            </div>
+            <div class="img4">
+                <img src="/gaming/trending-04.jpg">
+                <span class="price3"><em><strike>$64</strike></em><br>$44</span>
+                <div class="cat3">
+                    <span class="category3">Action</span>
+                    <h4>Assasin Creed</h4>
+                    <a href="product.html"><i class="fas fa-shopping-bag"></i></a>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
