--- a/gaming/gaming.html
+++ b/gaming/gaming.html
@@ -129,7 +129,7 @@
             </div>
             <div class="img4">
                 <img src="/gaming/trending-04.jpg">
-                <span class="price3"><em><strike>$64</strike></em><br>$44</span>
+                <span class="price3"><em>$64</em></span>
                 <div class="cat3">
                     <span class="category3">Action</span>
                     <h4>Assasin Creed</h4>
@@ -137,6 +137,9 @@
                 </div>
             </div>
         </div>
+    </div>
+    <div class="div3">
+        
     </div>
 </body>
 </html>
