--- a/gaming/gaming.html
+++ b/gaming/gaming.html
@@ -129,7 +129,7 @@
             </div>
             <div class="img4">
                 <img src="/gaming/trending-04.jpg">
-                <span class="price3"><em>$64</em></span>
+                <span class="price3"><em>$32</em></span>
                 <div class="cat3">
                     <span class="category3">Action</span>
                     <h4>Assasin Creed</h4>
@@ -139,7 +139,94 @@
         </div>
     </div>
     <div class="div3">
-        
+        <div class="div4"><br><br>
+            <h6>Top games</h6>
+            <div class="header-content1">
+                <h2>Most Played</h2>
+                <a href="shop.html">View All</a>
+            </div>
+        </div>
+        <div class="thumb1">
+            <div class="img5">
+                <img src="/gaming/top-game-01.jpg">
+                <div class="cat4">
+                    <span class="category4">Adventure</span>
+                    <h4>Assasin Creed</h4>
+                    <a href="product.html">Explore</a>
+                </div>
+            </div>
+            <div class="img6">
+                <img src="/gaming/top-game-02.jpg">
+                <div class="cat5">
+                    <span class="category5">Adventure</span>
+                    <h4>Assasin Creed</h4>
+                    <a href="product.html">Explore</a>
+                </div>
+            </div>
+            <div class="img7">
+                <img src="/gaming/top-game-03.jpg">
+                <div class="cat6">
+                    <span class="category6">Adventure</span>
+                    <h4>Assasin Creed</h4>
+                    <a href="product.html">Explore</a>
+                </div>
+            </div>
+            <div class="img8">
+                <img src="/gaming/top-game-04.jpg">
+                <div class="cat7">
+                    <span class="category7">Adventure</span>
+                    <h4>Assasin Creed</h4>
+                    <a href="product.html">Explore</a>
+                </div>
+            </div>
+            <div class="img9">
+                <img src="/gaming/top-game-05.jpg">
+                <div class="cat8">
+                    <span class="category8">Adventure</span>
+                    <h4>Assasin Creed</h4>
+                    <a href="product.html">Explore</a>
+                </div>
+            </div>
+            <div class="img10">
+                <img src="/gaming/top-game-06.jpg">
+                <div class="cat9">
+                    <span class="category9">Adventure</span>
+                    <h4>Assasin Creed</h4>
+                    <a href="product.html">Explore</a>
+                </div>
+            </div>
+        </div>
     </div>
+    <div class="div5">
+        <div class="category10">
+            <h6>Categories</h6>
+            <h2>Top Categories</h2>
+        </div>
+        <div class="top-cat">
+            <div class="cat-img1">
+                <h4>Action</h4>
+                <img src="/gaming/categories-01.jpg">
+            </div>
+            <div class="cat-img2">
+                <h4>Action</h4>
+                <img src="/gaming/categories-05.jpg">
+            </div>
+            <div class="cat-img3">
+                <h4>Action</h4>
+                <img src="/gaming/categories-03.jpg">
+            </div>
+            <div class="cat-img4">
+                <h4>Action</h4>
+                <img src="/gaming//categories-04.jpg">
+            </div>
+            <div class="cat-img5">
+                <h4>Action</h4>
+                <img src="/gaming//categories-05 (1).jpg">
+            </div>
+        </div>
+    </div>
+    <footer>
+        <p>Copyright © 2048 LUGX Gaming Company. All rights reserved. &nbsp;&nbsp; <a href="https://templatemo.com" target="_blank">Design: TemplateMo</a></p>
+    </footer>
 </body>
 </html>
