--- a/gaming/gaming.html
+++ b/gaming/gaming.html
@@ -225,6 +225,25 @@
             </div>
         </div>
     </div>
+    <div class="div6">
+        <div class="div7">
+            <img src="/gaming/cta-bg.jpg">
+        </div>
+        <div class="div8">
+            <div class="left">
+                <h6>Our Shop</h6>
+                <h2>Go Pre-Order<br>Buy Get<br> Best <em>Prices<br></em> For You!</h2>
+                <p>Lorem ipsum dolor consectetur<br>adipiscing, sed do eiusmod tempor<br>incididunt.</p>
+                <a href="shop.html">Shop Now</a>
+            </div>
+            <div class="right">
+                <h6>NEWSLETTER</h6>
+                <h2>Get Up To $100 Off<br>Just Buy<br><em>Subscribe</em><br>Newsletter!</h2>
+                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Your email...">
+                <button type="submit">Subscribe Now</button>
+            </div>
+        </div>
+    </div>
     <footer>
         <p>Copyright © 2048 LUGX Gaming Company. All rights reserved. &nbsp;&nbsp; <a href="https://templatemo.com" target="_blank">Design: TemplateMo</a></p>
     </footer>
