--- a/gaming/product.html
+++ b/gaming/product.html
@@ -62,57 +62,52 @@
     <div class="horizontal-line">
         <hr>
     </div>
-    <section class="description-box">
-        <div class="head">
-            <h6 onclick="contentChange(event)" id="description">Description</h6>
-            <hr>
-            <h6 onclick="contentChange(event)" id="reviews">Reviews &nbsp;(3)</h6>
-        </div>
-        <div id="descriptionContent" class="content active">
-            <p>You can search for more templates on Google Search using keywords such as "templatemo digital marketing", "templatemo one-page", "templatemo gallery", etc. Please tell your friends about our website. If you need a variety of HTML templates, you may visit Tooplate and Too CSS websites.</p><br>
-            <p>Coloring book air plant shabby chic, crucifix normcore raclette cred swag artisan activated charcoal. PBR&B fanny pack pok pok gentrify truffaut kitsch helvetica jean shorts edison bulb poutine next level humblebrag la croix adaptogen. Hashtag poke literally locavore, beard marfa kogi bruh artisan succulents seitan tonx waistcoat chambray taxidermy. Same cred meggings 3 wolf moon lomo irony cray hell of bitters asymmetrical gluten-free art party raw denim chillwave tousled try-hard succulents street art.</p>
-        </div>
-        <div id="reviewsContent" class="content">
-            <p>Coloring book air plant shabby chic, crucifix normcore raclette cred swag artisan activated charcoal. PBR&B fanny pack pok pok gentrify truffaut kitsch helvetica jean shorts edison bulb poutine next level humblebrag la croix adaptogen.
-            </p><br>
-            <p>Hashtag poke literally locavore, beard marfa kogi bruh artisan succulents seitan tonx waistcoat chambray taxidermy. Same cred meggings 3 wolf moon lomo irony cray hell of bitters asymmetrical gluten-free art party raw denim chillwave tousled try-hard succulents street art.</p>
-        </div>
-    </section>
-    <section class="top-categories">
-        <div class="top-categories-up">
-            <div class="top-categories-up-left">
-                <h6>Action</h6><br>
-                <h1>Related Games</h1>
-            </div>
-            <div class="top-categories-up-right">
-                <a href="ourShop.html"><button class="btn btn-danger">view all</button></a>
+    <div class="div5">
+        <h2>Description</h2>
+        <h2 class="reviews">Reviews (3)</h2>
+        <p>You can search for more templates on Google Search using keywords such as "templatemo digital marketing", "templatemo one-page",<br>
+            "templatemo gallery", etc. Please tell your friends about our website. If you need a variety of HTML templates, you may visit Tooplate and Too<br>
+            CSS websites.
+        </p><br>
+        <p>Coloring book air plant shabby chic, crucifix normcore raclette cred swag artisan activated charcoal. PBR&B fanny pack pok pok gentrify<br>
+            truffaut kitsch helvetica jean shorts edison bulb poutine next level humblebrag la croix adaptogen. Hashtag poke literally locavore, beard<br>
+            marfa kogi bruh artisan succulents seitan tonx waistcoat chambray taxidermy. Same cred meggings 3 wolf moon lomo irony cray hell of<br>
+            bitters asymmetrical gluten-free art party raw denim chillwave tousled try-hard succulents street art.
+        </p>
+    </div>
+    <div class="div6">
+        <div class="div7"><br><br>
+            <h6>Action</h6>
+            <div class="header-content1">
+                <h2>Related Games</h2>
+                <a href="shop.html">View All</a>
             </div>
         </div>
-        <div class="top-categories-images">
-            <div class="images-down">
-                <h3>Action</h3>
-                <a href=""><img src="https://templatemo.com/templates/templatemo_589_lugx_gaming/assets/images/categories-01.jpg" width="240" height="220"></a>
+        <div class="top-cat">
+            <div class="cat-img1">
+                <h4>Action</h4>
+                <img src="/gaming/categories-01.jpg">
             </div>
-            <div class="images-down">
-                <h3>Action</h3>
-                <a href=""><img src="https://templatemo.com/templates/templatemo_589_lugx_gaming/assets/images/categories-05.jpg" width="240" height="220"></a>
+            <div class="cat-img2">
+                <h4>Action</h4>
+                <img src="/gaming/categories-05.jpg">
             </div>
-            <div class="images-down">
-                <h3>Action</h3>
-                <a href=""><img src="https://templatemo.com/templates/templatemo_589_lugx_gaming/assets/images/categories-03.jpg" width="240" height="220"></a>
+            <div class="cat-img3">
+                <h4>Action</h4>
+                <img src="/gaming/categories-03.jpg">
             </div>
-            <div class="images-down">
-                <h3>Action</h3>
-                <a href=""><img src="https://templatemo.com/templates/templatemo_589_lugx_gaming/assets/images/categories-04.jpg" width="240" height="220"></a>
+            <div class="cat-img4">
+                <h4>Action</h4>
+                <img src="/gaming//categories-04.jpg">
             </div>
-            <div class="images-down">
-                <h3>Action</h3>
-                <a href=""><img src="https://templatemo.com/templates/templatemo_589_lugx_gaming/assets/images/categories-05.jpg" width="240" height="220"></a>
+            <div class="cat-img5">
+                <h4>Action</h4>
+                <img src="/gaming//categories-05 (1).jpg">
             </div>
         </div>
-    </section>
+    </div>
     <footer>
-        <p>Copyright © 2048 LUGX Gaming Company. All rights reserved. &nbsp; <a href="https://templatemo.com/" target="_blank"> Design: TemplateMo</a></p>
+        <p>Copyright © 2048 LUGX Gaming Company. All rights reserved. &nbsp;&nbsp; <a href="https://templatemo.com" target="_blank">Design: TemplateMo</a></p>
     </footer>
 </body>
 </html>
